{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 31,
  "lineage": "c703c704-d014-2bbb-29d2-dbd8ad210cdb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "el1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4f4044b29207709",
            "association_id": "eipassoc-0df365f9e725142fc",
            "domain": "vpc",
            "id": "eipalloc-0a4f4044b29207709",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01e7b37b8ce87090e",
            "private_dns": "ip-10-0-1-139.ec2.internal",
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-54-205-122-252.compute-1.amazonaws.com",
            "public_ip": "54.205.122.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03972092c42e8c0ca",
            "arn": "arn:aws:ec2:us-east-1:846987256738:instance/i-0138935da08ba187f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0138935da08ba187f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06250ea35d973b15e",
            "private_dns": "ip-10-0-3-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0078c42279de5cae7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0951f9a580cdff7cd",
            "tags": {
              "Name": "web1"
            },
            "tags_all": {
              "Name": "web1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09223e2e9dfac0613"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-demo",
            "aws_subnet.private1",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03972092c42e8c0ca",
            "arn": "arn:aws:ec2:us-east-1:846987256738:instance/i-06485bea4a71f906c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06485bea4a71f906c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0211d0bee025e56d4",
            "private_dns": "ip-10-0-4-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09bc7f5d47a7abb95",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0616a143b52095258",
            "tags": {
              "Name": "web1"
            },
            "tags_all": {
              "Name": "web1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09223e2e9dfac0613"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-demo",
            "aws_subnet.private2",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gtw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846987256738:internet-gateway/igw-0ba232a877df6ddcb",
            "id": "igw-0ba232a877df6ddcb",
            "owner_id": "846987256738",
            "vpc_id": "vpc-097aa757ad7c5bba4"
          },
          "dependencies": [
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846987256738:loadbalancer/app/alb/4d104a154bc45133",
            "arn_suffix": "app/alb/4d104a154bc45133",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-1265976626.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:846987256738:loadbalancer/app/alb/4d104a154bc45133",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09223e2e9dfac0613"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0616a143b52095258"
              },
              {
                "subnet_id": "subnet-0e1d86edc65d1f387"
              }
            ],
            "subnets": [
              "subnet-0616a143b52095258",
              "subnet-0e1d86edc65d1f387"
            ],
            "vpc_id": "vpc-097aa757ad7c5bba4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-demo",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846987256738:listener/app/alb/4d104a154bc45133/0b01e42a9143c6f6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:846987256738:targetgroup/alb-tg/85c8a25219894afd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846987256738:listener/app/alb/4d104a154bc45133/0b01e42a9143c6f6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:846987256738:loadbalancer/app/alb/4d104a154bc45133",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb1",
            "aws_lb_target_group.tg1",
            "aws_security_group.sg-demo",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846987256738:targetgroup/alb-tg/85c8a25219894afd",
            "arn_suffix": "targetgroup/alb-tg/85c8a25219894afd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 100,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846987256738:targetgroup/alb-tg/85c8a25219894afd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-097aa757ad7c5bba4"
          },
          "dependencies": [
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "at1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:846987256738:targetgroup/alb-tg/85c8a25219894afd-20240728211351229900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:846987256738:targetgroup/alb-tg/85c8a25219894afd",
            "target_id": "i-0138935da08ba187f"
          },
          "dependencies": [
            "aws_instance.server1",
            "aws_lb_target_group.tg1",
            "aws_security_group.sg-demo",
            "aws_subnet.private1",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "at2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:846987256738:targetgroup/alb-tg/85c8a25219894afd-20240728211350925200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:846987256738:targetgroup/alb-tg/85c8a25219894afd",
            "target_id": "i-06485bea4a71f906c"
          },
          "dependencies": [
            "aws_instance.server2",
            "aws_lb_target_group.tg1",
            "aws_security_group.sg-demo",
            "aws_subnet.private2",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4f4044b29207709",
            "connectivity_type": "public",
            "id": "nat-0a90ecd50ed7614fb",
            "network_interface_id": "eni-01e7b37b8ce87090e",
            "private_ip": "10.0.1.139",
            "public_ip": "54.205.122.252",
            "subnet_id": "subnet-0e1d86edc65d1f387"
          },
          "dependencies": [
            "aws_eip.el1",
            "aws_subnet.public1",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846987256738:route-table/rtb-0ee1492c74a13bda5",
            "id": "rtb-0ee1492c74a13bda5",
            "owner_id": "846987256738",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a90ecd50ed7614fb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-097aa757ad7c5bba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.el1",
            "aws_nat_gateway.nat1",
            "aws_subnet.public1",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846987256738:route-table/rtb-0654f3c4cc0856a3b",
            "id": "rtb-0654f3c4cc0856a3b",
            "owner_id": "846987256738",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba232a877df6ddcb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-097aa757ad7c5bba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gtw1",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcaf5a38eaf76dc8",
            "route_table_id": "rtb-0654f3c4cc0856a3b",
            "subnet_id": "subnet-0e1d86edc65d1f387"
          },
          "dependencies": [
            "aws_internet_gateway.gtw1",
            "aws_route_table.rtpu",
            "aws_subnet.public1",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c674db00b420ddf",
            "route_table_id": "rtb-0654f3c4cc0856a3b",
            "subnet_id": "subnet-099376b09b8cf0e49"
          },
          "dependencies": [
            "aws_internet_gateway.gtw1",
            "aws_route_table.rtpu",
            "aws_subnet.public2",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2c5f8e49ec99acc",
            "route_table_id": "rtb-0ee1492c74a13bda5",
            "subnet_id": "subnet-0951f9a580cdff7cd"
          },
          "dependencies": [
            "aws_eip.el1",
            "aws_nat_gateway.nat1",
            "aws_route_table.rtpri",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056306a8586301ae5",
            "route_table_id": "rtb-0ee1492c74a13bda5",
            "subnet_id": "subnet-0616a143b52095258"
          },
          "dependencies": [
            "aws_eip.el1",
            "aws_nat_gateway.nat1",
            "aws_route_table.rtpri",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846987256738:security-group/sg-09223e2e9dfac0613",
            "description": "Allow httpd",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09223e2e9dfac0613",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "846987256738",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "Dev"
            },
            "tags_all": {
              "env": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-097aa757ad7c5bba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-demo1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846987256738:security-group/sg-0f6f7be6ce3cf480f",
            "description": "Allow ssh and httpd",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6f7be6ce3cf480f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09223e2e9dfac0613"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "846987256738",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "Dev"
            },
            "tags_all": {
              "env": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-097aa757ad7c5bba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-demo",
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846987256738:subnet/subnet-0951f9a580cdff7cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0951f9a580cdff7cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846987256738",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-private-subnet-1a"
            },
            "tags_all": {
              "Name": "utc-private-subnet-1a"
            },
            "vpc_id": "vpc-097aa757ad7c5bba4"
          },
          "dependencies": [
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846987256738:subnet/subnet-0616a143b52095258",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0616a143b52095258",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846987256738",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-private-subnet-1b"
            },
            "tags_all": {
              "Name": "utc-private-subnet-1b"
            },
            "vpc_id": "vpc-097aa757ad7c5bba4"
          },
          "dependencies": [
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846987256738:subnet/subnet-0e1d86edc65d1f387",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1d86edc65d1f387",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846987256738",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-public-subnet-1a"
            },
            "tags_all": {
              "Name": "utc-public-subnet-1a"
            },
            "vpc_id": "vpc-097aa757ad7c5bba4"
          },
          "dependencies": [
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846987256738:subnet/subnet-099376b09b8cf0e49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099376b09b8cf0e49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846987256738",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-public-subnet-1b"
            },
            "tags_all": {
              "Name": "utc-public-subnet-1b"
            },
            "vpc_id": "vpc-097aa757ad7c5bba4"
          },
          "dependencies": [
            "aws_vpc.vp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846987256738:vpc/vpc-097aa757ad7c5bba4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6d58384cc8b3e0d",
            "default_route_table_id": "rtb-0461b486ce1ce9771",
            "default_security_group_id": "sg-0e7be09410668a6e5",
            "dhcp_options_id": "dopt-041ec2d669f9a1af2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097aa757ad7c5bba4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0461b486ce1ce9771",
            "owner_id": "846987256738",
            "tags": {
              "Name": "ELB-Vpc",
              "Team": "wdp",
              "env": "dev"
            },
            "tags_all": {
              "Name": "ELB-Vpc",
              "Team": "wdp",
              "env": "dev"
            }
          }
        }
      ]
    }
  ]
}